# vocode-next-template

./: package.json
api/: index.py  pyproject.toml
