[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Sebastian Rojo <arpagon@gmail.com>"]
license = "MIT"
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
vocode = { git = "https://github.com/huangyingting/vocode-core.git" }
python-dotenv = "^1.0.1"
langchain = "^0.3.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

